[tool.poetry]
name = "raft"
version = "0.1.0"
description = ""
authors = ["Amod Wani <amodwani04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.2"
aiohttp = "^3.7.4"
ipython = "^7.23.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
